# WeatherTelegramBot

./: .gitignore  README.md  main.py  pyproject.toml
weathertelegrambot/: __init__.py  api.py  bot.py  commands.py  config.py
weathertelegrambot/handlers/: __init__.py  admin.py  client.py
weathertelegrambot/keyboards/: __init__.py  reply.py
